manifest/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
 name: nginx-ingress
 namespace: default
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: test.minikube.me
   http:
     paths:
     - path: /
       backend:
         serviceName: contracts
         servicePort: 9999
